--- a/style.css
+++ b/style.css
@@ -16,3 +16,13 @@ body {
   flex: 0 1 50%;
   border: 1px solid gray;
 }
+.screen {
+  padding: 1rem;
+}
+button {
+  all: unset;
+  border: 1px solid black;
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
+  box-shadow: 4px 4px 0px 1px red;
+}
