--- a/style.css
+++ b/style.css
@@ -16,3 +16,21 @@ body {
   flex: 0 1 50%;
   border: 1px solid gray;
 }
+.box {
+  /* height: 300px; */
+  background-color: mediumseagreen;
+  padding: 2rem;
+  justify-content: space-around;
+}
+
+.left,
+.right {
+  height: 300px;
+  flex: 0 0 48%;
+
+  border: 2px solid black;
+}
+.left.active {
+  background-color: red;
+  transition: background-color 0.2s linear;
+}
